--- a/style.css
+++ b/style.css
@@ -10,8 +10,22 @@
     border: 5px solid green;
     height: 400px;
     width: 300px;
-
-    
+}
+.bot-class{
+    display: grid;
+    grid-template-columns:1fr 1fr; grid-gap:5px;
+    grid-template-areas: "control operation"
+                        "number operation";
+}
+.control{
+    grid-area: control;
+}
+.number{
+    grid-area: number;
+}
+.operation{
+    grid-area: operation;
+    width: 40px;
 }
 
 .screen{
@@ -27,4 +41,11 @@
 }
 .number{
     border: 5px solid chocolate;
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    /* grid-auto-flow: column; */
+    /* grid-auto-rows:minmax(10px,auto); */
+    grid-gap: 4px;
 }
