--- a/style.css
+++ b/style.css
@@ -1,51 +1,40 @@
-.container{
+body{
+    background-color: #4b4a4a;
     justify-content: center;
-    /* align-items: center; */
-    /* display: flex; */
-    display: grid;
-    padding: 50px;
-    border: 5px solid black;
+    align-items: center;
 }
-.container_2{
-    border: 5px solid green;
-    height: 400px;
-    width: 300px;
+
+.container{
+    display: flex;
+    height: 450px;
 }
+
 .bot-class{
-    display: grid;
-    grid-template-columns:1fr 1fr; grid-gap:5px;
-    grid-template-areas: "control operation"
-                        "number operation";
-}
-.control{
-    grid-area: control;
-}
-.number{
-    grid-area: number;
-}
-.operation{
-    grid-area: operation;
-    width: 40px;
+    justify-content: center;
+    align-items: center;
+    border: solid rgb(63, 62, 62);
+    border-radius: 7px;
+    background-color: #ccc;
+    padding: 10px;
 }
 
 .screen{
-    border: 5px solid red;
-    height: 100px;
+    border: solid rgb(63, 62, 62);
+    border-radius: 5px;
+    height: 110px;
+    margin-bottom: 20px;    
 }
 
-.control{
-    border: 5px solid brown;
+button{
+    width: 55px;
+    height: 50px;
+    margin: 3px;
 }
-.operation{
-    border: 5px solid blue;
+.span-2{
+    width: 120px;
 }
-.number{
-    border: 5px solid chocolate;
-    display: grid;
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    /* grid-auto-flow: column; */
-    /* grid-auto-rows:minmax(10px,auto); */
-    grid-gap: 4px;
+
+.adjust{
+    margin-top: 100px;
+    margin-left: 600px;
 }
