--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button{
 #del-btn{
     background-color: red;
 }
-.sign{
+#sign{
     background-color: orange;
 }
 #equal-btn{
@@ -66,7 +66,7 @@ button{
     background-color: black;
     color: white;
 }
-.value_num{
+#data{
     background-color: black;
     color: white;
 }
